# trakrai

./: .gitignore  .prettierignore  AGENTS.md  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
.claude/: launch.json
.github/scripts/: device_binary_release.py
.github/workflows/: publish-device-binaries.yml
apps/trakrai/: .env.example  docker-compose.yaml  drizzle.config.ts  eslint.config.mjs  next.config.ts  package.json
autodocs/diagrams/: cloud-device-communication-overview.mmd
cloud/: .gitignore  knip.config.ts  package.json  pnpm-lock.yaml  turbo.json
cloud/.husky/: pre-commit
cloud/deploy/: docker-compose.yml
cloud/docs/: communication-layer-plan.md
deploy/: .env.example  Caddyfile  docker-compose.yml
deploy/coturn/: entrypoint.sh  turnserver.conf
deploy/mosquitto/: mosquitto.conf
device/: .dockerignore  .gitignore  Dockerfile  Dockerfile.gstreamer  Makefile  NATIVE_PIPELINE_RUNBOOK.md  __init__.py  go.mod  go.sum  package-versions.json  workflow-engine-foundation.md
device/cloud-comm/: .gitignore  Dockerfile  Makefile  config.sample.json  go.mod  go.sum
device/configs/: ai-inference-native.sample.json  ai-inference.sample.json  audio-alert.sample.json  audio-manager.sample.json  cloud-comm.sample.json  cloud-transfer.sample.json  deepstream-pipeline.sample.json  event-recorder.sample.json  live-feed.sample.json  ptz-control.sample.json  roi-config.sample.json  rtsp-feeder.sample.json  runtime-manager.sample.json  transfer-manager.sample.json  video-recorder.sample.json  workflow-comm.sample.json  workflow-engine.sample.json
device/devtool/: __init__.py  assets.py  build.py  cameras.py  cli.py  configs.py  contract_tools.py  contracts.py  deploy.py  interactive.py  local.py  manifests.py  packages.py  paths.py  python_support.py  request_files.py  runtime.py  runtime_client.py  runtime_ssh_client.py  schema_tools.py  service_configs.py  service_contracts.py  service_definitions.py  service_targets.py  services.py  shell_completion.py  ssh_transport.py  stage.py  testing.py  utils.py  websocket_client.py
device/docs/: devtool-instructions.md  devtool.md  jetson-deploy-runbook.md  service-method-contracts-guide.md
device/live-feed/: .gitignore  Dockerfile  Makefile  config.sample.json  go.mod  go.sum
device/localdev/: README.md  docker-compose.gpu.yml  docker-compose.yml
device/manifests/: components.json  service-methods.json  services.json
device/native/tensorrt-yolo/: CMakeLists.txt  README.md
device/native/tensorrt-yolo/src/: main.cpp
device/python/: Dockerfile.wheel  conftest.py
device/python/ai_inference/: Dockerfile.wheel  README.md  __init__.py  main.py  pyproject.toml  requirements-local.txt  requirements.txt  service.py
device/python/ai_inference/src/: backend.py  config.py  service.py
device/python/ai_inference/src/ai_inference/: config.py  main.py  service.py
device/python/ai_inference/src/yolo_runtime/models/: common.py  experimental.py  tf.py  yolo.py
device/python/ai_inference/src/yolo_runtime/utils/: __init__.py  activations.py  augmentations.py  autoanchor.py  autobatch.py  benchmarks.py  callbacks.py  dataloaders.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py
device/python/ai_inference/src/yolo_runtime/utils/aws/: resume.py
device/python/ai_inference/src/yolo_runtime/utils/flask_rest_api/: example_request.py  restapi.py
device/python/ai_inference/src/yolo_runtime/utils/loggers/: __init__.py
device/python/ai_inference/src/yolo_runtime/utils/loggers/clearml/: clearml_utils.py  hpo.py
device/python/ai_inference/src/yolo_runtime/utils/loggers/wandb/: log_dataset.py  sweep.py  wandb_utils.py
device/python/ai_inference/tests/: test_backend.py  test_config.py
device/python/audio_manager/: Dockerfile.wheel  FLOW.md  README.md  __init__.py  main.py  pyproject.toml
device/python/audio_manager/src/: config.py  models.py  service.py  speaker.py  store.py  tts.py
device/python/audio_manager/src/trakrai_audio_manager/: config.py  ipc.py  main.py  playback.py  service.py  tts.py
device/python/audio_manager/tests/: test_store.py  test_tts.py
device/python/workflow_engine/: Dockerfile.wheel  README.md  main.py  pyproject.toml
device/python/workflow_engine/src/: config.py  dag.py  engine.py  mock_feed.py  models.py  node_support.py  registry.py  service.py  types.py  validator.py
device/python/workflow_engine/src/nodes/: __init__.py  audio_nodes.py  detection_nodes.py  violation_nodes.py
device/python/workflow_engine/src/trakrai_workflow_engine/: config.py  dag.py  engine.py  exceptions.py  ipc.py  main.py  mock_feed.py  payloads.py  registry.py  service.py  service_bridge.py  types.py  validator.py
device/python/workflow_engine/src/trakrai_workflow_engine/nodes/: __init__.py  audio_nodes.py  detection_nodes.py
device/python/workflow_engine/tests/: test_engine.py
device/rtsp-feeder/: .gitignore  Dockerfile  Makefile  README.md  config.sample.json  go.mod
device/scripts/: JETSON_DEPLOY_RUNBOOK.md  README.md  bootstrap_device_runtime.py  deploy_device_runtime.py  device_runtime_common.py  find_python_duplicates.py  local_device_runtime.py  (+6 more)
docs/: BRINGUP.md  README.md  SCALING.md  audio-manager-dashboard.md  devtool-instructions.md  devtool.md  jetson-deploy-runbook.md  local-db-openfga-bringup.md  permission-management-openfga-flow.md
scripts/: bringup.sh  scan_hardcoded_addresses.py
web/: .dockerignore  .gitignore  .lintstagedrc.mjs  Dockerfile.trakrai  Dockerfile.trakrai-device-bundle  knip.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.scripts.json  turbo.json
(+539 files in other folders)
