[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trakrai-workflow-engine"
description = "Minimal TrakrAI workflow engine runtime service for edge devices"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
authors = [
  { name = "TrakrAI" },
]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
trakrai-workflow-engine = "workflow_engine.main:main"
trakrai-workflow-feed = "workflow_engine.mock_feed:main"

[tool.setuptools]
packages = ["workflow_engine"]
include-package-data = false

[tool.setuptools.package-dir]
workflow_engine = "."

[tool.setuptools.package-data]
workflow_engine = ["src/*.py", "src/nodes/*.py"]

[tool.setuptools.dynamic]
version = { attr = "workflow_engine._version.__version__" }
